force-app/main/default/objects/Retail_Sales_Team_Performance_Tracker__c/Retail_Sales_Team_Performance_Tracker__c.object-meta.xml
<CustomObject>
    <label>Retail Sales Team Performance Tracker</label>
    <nameField>
        <displayFormat>RST-{0000}</displayFormat>
        <label>Retail STPT Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Sales Team Performance Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>