force-app/main/default/objects/Retail_Sales_Team_Performance_Tracker__c/fields/Amount_received_till_date__c.field-meta.xml
<CustomField>
    <fullName>Amount_received_till_date__c</fullName>
    <label>Amount received till date</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>