force-app/main/default/objects/Retail_Sales_Team_Performance_Tracker__c/fields/Amount_Received_Today__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_Today__c</fullName>
    <label>Amount Received Today</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>