force-app/main/default/objects/Retail_Sales_Team_Performance_Tracker__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Retail_District__c.State__c</field>
            <operation>equals</operation>
            <valueField>$Source.State__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Retail_District__c</referenceTo>
    <relationshipLabel>Retail Sales Team Performance Trackers</relationshipLabel>
    <relationshipName>Retail_Sales_Team_Performance_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>