force-app/main/default/objects/Retail_Sales_Team_Performance_Tracker__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Sales Team Performance Trackers</relationshipLabel>
    <relationshipName>Retail_Sales_Team_Performance_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>