force-app/main/default/objects/Retail_Sales_Team_Performance_Tracker__c/fields/Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Target__c</fullName>
    <label>Monthly Target</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>