force-app/main/default/objects/Retail_Sales_Team_Performance_Tracker__c/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Owner</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Sales Team Performance Trackers (Sales Owner)</relationshipLabel>
    <relationshipName>Retail_Sales_Team_Performance_Trackers1</relationshipName>
    <type>Lookup</type>
</CustomField>