force-app/main/default/objects/Retail_Sales_Team_Performance_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>District__c</columns>
    <columns>Monthly_Target__c</columns>
    <columns>Amount_received_till_date__c</columns>
    <columns>Amount_Received_Today__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>